# minigit

./: .gitignore  CMakeLists.txt  README.md
include/: add.h  branch.h  branch_utils.h  checkout.h  checkout_utils.h  commit.h  commit_utils.h  init.h  log.h  merge.h  merge_utils.h  status.h  utils.h
include/add/: add.h
include/branch/: branch.h  branch_utils.h
include/checkout/: checkout.h
include/commit/: commit_graph_utils.h  commit_utils.h
include/index/: index_utils.h
include/merge/: merge.h  merge_commit.h  merge_conflict.h  merge_state.h  merge_utils.h
include/utils/: utils.h
src/: add.cpp  branch.cpp  branch_utils.cpp  checkout.cpp  checkout_utils.cpp  commit.cpp  commit_utils.cpp  init.cpp  log.cpp  main.cpp  merge.cpp  merge_utils.cpp  status.cpp  utils.cpp
src/add/: add.cpp
src/branch/: branch.cpp  branch_utils.cpp
src/checkout/: checkout.cpp  checkout_utils.cpp
src/commit/: commit.cpp  commit_graph_utils.cpp  commit_utils.cpp
src/index/: index_utils.cpp
src/merge/: merge.cpp  merge_commit.cpp  merge_conflict.cpp  merge_state.cpp  merge_utils.cpp
src/status/: status.cpp
src/utils/: utils.cpp
